--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,14 @@ cycler==0.10.0
 decorator==5.0.7
 defusedxml==0.7.1
 entrypoints==0.3
+gpytorch==1.4.1
 ipykernel==5.5.3
 ipython==7.23.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.12
@@ -50,10 +52,13 @@ python-dateutil==2.8.1
 pyzmq==22.0.3
 qtconsole==5.0.3
 QtPy==1.9.0
+scikit-learn==0.24.2
+scipy==1.6.3
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.4
 testpath==0.4.4
+threadpoolctl==2.1.0
 torch==1.8.1
 tornado==6.1
 tqdm==4.60.0
